# tremolog

./: .gitignore  README.md  debug.sh  pyproject.toml  run.sh  tremolo.py
src/tremolog/: __init__.py  cli.py  models.py  settings.py  telegram.py  tremolog.py
src/tremolog/static/styles/: app.css
src/tremolog/templates/: base.html  index.html
static/styles/: app.css
templates/: index.html
